--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,8 @@ layout: default
     {{ content }}
   </div>
   <div class="col-md-6">
-    <img src="{{ site.github.url }}/images/main.jpeg" alt="Home" width="100%">
+    <img src="![download](https://user-images.githubusercontent.com/96566178/147783338-7f7b3b48-a604-4a15-9ebc-cdbc028d5ecb.jpg)
+" alt="Home" width="100%">
   </div>
 </div>
 
