--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -9,6 +9,9 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-6">
     <h5>{{ person.name }}</h5>
+    <p>Title: {{ person.title }}</p>
+    <p>Institution: {{ person.institution}}</p>
+    <p>Department: {{person.department}}</p>
     <p>Email: {{ person.email }}</p>
     <p><a href="{{ site.github.url }}/people/{{ person.url }}">More info</a></p>
   </div>
