--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
-{Future publications will be here.}
+{{Content}}
 
 {% include publications.html %}
+
+Future publications will be here.
