--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,6 +5,9 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-6">
     <h3 class="fw-bold">Particle Trajectory</h3>
+    {% raw %}
+    $$a^2 + b^2 = c^2$$
+    {% endraw %}
     {{ content }}
   </div>
 </div>
