--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 ---
-
-{{ content }}
-
-{% include about.html %}
+<div class="row g-5 mb-5">
+  <div class="col-md-6">
+    <h3 class="fw-bold">About</h3>
+    {{ content }}
+  </div>
+  <div class="col-md-6">
+    <img src="{{ site.github.url }}/assets/img/home.jpeg" alt="Home" width="100%">
+  </div>
+</div>
